--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^13.4.0",
+    "@types/uuid": "^9.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.27.4",
