--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "redux-logger": "^3.0.6",
+    "@types/redux-logger": "^3.0.9",
     "big.js": "^6.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -48,6 +50,7 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^13.4.0",
+    "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^9.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
