--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.57.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
