--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-test-renderer": "^18.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "axios": "^1.2.3",
     "sass": "^1.57.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
